<resources>
    <string name="app_name">Sched</string>
    <string name="class_name_field_hint">Class Name</string>
    <string name="class_prof_field_hint">Professor</string>
    <string name="class_loca_field_hint">Location</string>
    <string name="class_time_from_field_hint">From</string>
    <string name="class_time_to_field_hint">To</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
